--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,15 @@
     <string name="action_settings">Settings</string>
     <string name="name">Name</string>
     <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
-    <string name="kms_trip">Kms/Trip</string>
-    <string name="total_kms">Total Kms</string>
+    <string name="kms_trip">Trip</string>
+    <string name="total_kms">Total</string>
     <string name="end">End</string>
     <string name="start">Start</string>
     <string name="event">Event</string>
+    <string name="view_kilometers_by">View Kilometers By:</string>
+    <string name="week">Week</string>
+    <string name="month">Month</string>
+    <string name="year">Year</string>
     <string-array name="names">
         <item>Week</item>
         <item>Month</item>
