--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KmCounterAndroid</string>
+    <string name="app_name">KmCounter</string>
     <string name="action_settings">Settings</string>
     <string name="name">Name</string>
     <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
